--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
+<!--
+@author Daniel Huijskens
+@email huijskens.daniel@gmail.com
+@create date 2019-02-15 13:16:53
+@modify date 2019-02-15 13:16:53
+@desc [description]
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
